--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@material/form-field": "^6.0.0",
     "angular-pipes": "^10.0.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
