--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "angular-pipes": "^10.0.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "eslint": "^6.8.0",
     "jquery": "^3.5.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-pagination": "^5.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "^3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -51,9 +53,6 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "protractor": "~5.4.3"
   }
 }
