Node Schemas, file organising

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
   "author": "Jahan Ulhaque",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.12",
     "nodemon": "^2.0.3"
   }
 }
