--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^9.1.4",
     "@material/form-field": "^6.0.0",
     "angular-pipes": "^10.0.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "eslint": "^6.8.0",
