--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,11 @@
   "author": "Jahan Ulhaque",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.12",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.3"
   }
 }
