--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.12",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.3"
   }
