--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "3": "^2.1.0",
     "-": "0.0.1",
+    "@agm/core": "^1.1.0",
     "@angular/animations": "^9.1.4",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "^9.1.4",
