--- a/frontend/.travis.yml
+++ b/frontend/.travis.yml
@@ -1,18 +1,18 @@
-language: node_js
-node_js: -12.16.2
-cache: npm
+# language: node_js
+# node_js: -12.16.2
+# cache: npm
 
-install: 
-- npm ci
+# install: 
+# - npm ci
 
-script: 
-- npm test
-- npm run build
+# script: 
+# - npm test
+# - npm run build
 
-deploy: 
-provider: pages
-skip-cleanup: true 
-github-token: $GITHUB_TOKEN 
+# deploy: 
+# provider: pages
+# skip-cleanup: true 
+# github-token: $GITHUB_TOKEN 
 
-on:
-branch: master
+# on:
+# branch: master
