--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "datejs": "^1.0.0-rc3",
     "eslint": "^6.8.0",
     "jquery": "^3.5.0",
     "ngx-bootstrap": "^5.6.1",
